Fixed the ball on mobile

--- a/styles.css
+++ b/styles.css
@@ -2,11 +2,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  --background-size: unquote("min(100vw, 40em)");
-  font-size: calc(100% + 0.2vw);
-  font-family: "Graphik Trial", sans-serif;
-  letter-spacing: normal;
-  line-height: 1.5rem;
+
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -14,6 +10,16 @@
     animation: none !important;
     transition-duration: 0.001s !important;
   }
+}
+
+html {
+  --background-size: unquote("min(100vw, 40em)");
+  font-family: "Graphik Trial", sans-serif;
+  line-height: 1.15;
+  letter-spacing: normal;
+  -ms-text-size-adjust: 100%; 
+  -webkit-text-size-adjust: 100%;
+  font-size: calc(100% + 0.2vw);
 }
 
 body {
@@ -162,16 +168,14 @@ h1 {
 
 .magic-ball-result {
   font-family: "Digital-7", sans-serif;
-  width: 19em;
-  height: 19em;
+  width: 30rem;
+  height: 30rem;
   background-color: #000;
   border-radius: 50%;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
-  font-size: 1em;
-  line-height: 1.5em;
   font-weight: bold;
   color: white;
   box-shadow: 0 0 5rem rgba(128, 121, 121, 0.5);
@@ -219,4 +223,35 @@ address {
   &:hover {
     color: #ffd700;
   }
+}
+
+@media only screen and (max-width: 425px) {
+
+  .text-field__input {
+    font-size: 60%;
+    height: 3rem;
+    border-radius: 3rem;
+  }
+
+  .user-question {
+    font-size: 0.7rem;
+    width: 100%;
+  }
+
+  .magic-ball-result {
+    width: 15rem;
+    height: 15rem;
+    width: 18rem;
+    height: 18rem;
+    font-size: 0.9rem;
+}
+
+.magic-ball-result:before {
+    font-size: 8rem;
+    width: 8rem;
+    height: 8rem;
+    text-align: center;
+    line-height: 9rem;
+}
+
 }
